# modelgen

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.venv312/: pyvenv.cfg
.venv312/Scripts/: activate  activate.bat
examples/: classification_example.csv  regression_example.csv
scripts/: generate_synthetic_data.py
src/modelgen/: __init__.py  cli.py  configs.py  logging_setup.py  ui_app.py
src/modelgen/io/: loaders.py  schema.py
src/modelgen/ml/: artifacts.py  evaluate.py  pipelines.py  train.py
src/modelgen/viz/: plots.py
tests/: test_loaders.py  test_train_eval.py
